Fix warnings in PermissionHelper